force-app/main/default/objects/object__mdt/object__mdt.object-meta.xml
<CustomObject>
    <label>object</label>
    <pluralLabel>objects</pluralLabel>
</CustomObject>