force-app/main/default/objects/object__mdt/fields/criteria__c.field-meta.xml
<CustomField>
    <fullName>criteria__c</fullName>
    <label>criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>