force-app/main/default/objects/object__mdt/fields/criteria_value__c.field-meta.xml
<CustomField>
    <fullName>criteria_value__c</fullName>
    <label>criteria_value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>