force-app/main/default/objects/object__mdt/fields/isInsert__c.field-meta.xml
<CustomField>
    <fullName>isInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInsert</label>
    <type>Checkbox</type>
</CustomField>