force-app/main/default/objects/object__mdt/fields/parent__c.field-meta.xml
<CustomField>
    <fullName>parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>parent</label>
    <type>Checkbox</type>
</CustomField>