force-app/main/default/objects/object__mdt/fields/parent_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>parent_Api_Name__c</fullName>
    <label>parent Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>