force-app/main/default/objects/object__mdt/fields/rowWise__c.field-meta.xml
<CustomField>
    <fullName>rowWise__c</fullName>
    <defaultValue>true</defaultValue>
    <label>rowWise</label>
    <type>Checkbox</type>
</CustomField>